# Actix-Web-Handlebars-SQLX-Boilerplate

./: .gitignore  Cargo.toml
migrations/: 20220731095740_initial.sql
src/: main.rs  routes.rs
templates/: index.html
