[package]
name="actix-handlebars-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4" }
sqlx = { version = "^0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
rand = "^0.8"
maud = { version = "*", features = ["actix-web"] }
serde_json = "^1.0"
dotenv = "^0.15"
mime = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
